--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,32 @@
 /*  your css code here. If applicable */
+/* styles.css */
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+  background-color: #f0f0f0;
+}
+
+.star {
+  width: 0;
+  height: 0;
+  border-left: 50px solid transparent;
+  border-right: 50px solid transparent;
+  border-bottom: 100px solid yellow;
+  position: relative;
+  top: -30px;
+}
+
+.star:before {
+  content: '';
+  width: 0;
+  height: 0;
+  border-left: 50px solid transparent;
+  border-right: 50px solid transparent;
+  border-top: 100px solid yellow;
+  position: absolute;
+  top: 30px;
+  left: -50px;
+}
